2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AspNet/AspNetExecutionHandler.cs: Track api
	  changes.

2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/AspNetFileDescriptionTemplate.cs: Track
	  SingleFileDescription template API.

2010-06-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AspNet/AspNetSyntaxMode.cs: Fixed 'Bug 611558 -
	  Phantom text in editor after typing </script>'.

2010-06-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Partial
	  support for HTML encoded expressions and script blocks.

2010-06-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.StateEngine/AspNetDom.cs:
	* MonoDevelop.AspNet.StateEngine/AspNetExpressionState.cs: Add
	  support for HTML encoded expressions in the state engine.

	* MonoDevelop.AspNet.StateEngine/HtmlTagState.cs:
	* MonoDevelop.AspNet.StateEngine/HtmlScriptBodyState.cs:
	  Support for HTML script blocks.

	* Makefile.am:
	* MonoDevelop.AspNet.csproj: Added file to project.

2010-06-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs:
	* MonoDevelop.AspNet.Gui/ILanguageCompletionBuilder.cs: Worked
	  on ASP.NET completion.

2010-05-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AspNet.csproj: Don't require a specific M.A
	  version.

2010-05-30  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/CodeBehind.cs: Moved duplicate field
	  elimination code into re-usable method.

	* MonoDevelop.AspNet.Gui/AspProjectDom.cs:
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs:
	* MonoDevelop.AspNet.Gui/ILanguageCompletionBuilder.cs: Added
	  support for CodeBeside members in embedded completion.

	* MonoDevelop.AspNet.Parser/MemberListVisitor.cs: Collect
	  locations of items.

2010-05-29  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.AspNet.csproj:
	* MonoDevelop.AspNet/AspNetAppProject.cs: