@@ -1,3 +1,8 @@
+2010-06-16  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.AspNet/AspNetSyntaxMode.cs: Fixed 'Bug 611859 -
+	  aspx highlighting issues'.
+
 2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.AspNet/AspNetExecutionHandler.cs: Track api
